# TitleForge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/titleforge/: __init__.py  __main__.py  classify.py  cleanup.py  cli.py  config.py  discover.py  extra_category.py  models.py  nfo.py  normalize.py  pack.py  plex_paths.py  prompt_ui.py  query_clean.py  rescue.py  resolve.py  review_app.py  search_review_app.py  series_folder.py  sidecars.py  tmdb_client.py  tmdb_errors.py
tests/: test_classify_dot_year.py  test_cleanup.py  test_compute_missing.py  test_config_paths.py  test_entity_decision_notice.py  test_entity_labels.py  test_episode_summary.py  test_finalize_episode_silent.py  test_movie_entity.py  test_normalize.py  test_pack_series.py  test_plex_paths.py  test_prompt_search_type.py  test_query_clean.py  test_rescue.py  test_resolve_similarity.py  test_search_edit_modal.py  test_sidecars.py  test_tmdb_path_skip.py
